--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
     </ul>
 </section>
 
+<section class="articles">
+    <h2>&lt;Articles /&gt;</h2>
+    <div class="container">
+        <div class="article-element">
+            <svg class="icon" width="20" height="20">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
+            </svg>
+            <a class="link" href="https://medium.com/@tatianakorosteleva/react-amsterdam-2017-60e64e23a50e" target="_blank">React Amsterdam 2017</a>
+        </div>
+    </div>
+</section>
+
 <section class="courses">
     <h2>&lt;Courses /&gt;</h2>
 
