add advansed js course

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
             </div>
         </li>
     </ul>
+    <div class="projects-see-more">
+        See more on <a href="https://github.com/korosteleva" target="_blank">github</a>
+    </div>
 </section>
 
 <section class="articles">
@@ -155,12 +158,35 @@
         <li>
             <div class="github-card">
                 <div class="github-card-title">ReactJS</div>
-                <p class="experience-element-date">March, 2017</p>
+                <p class="experience-element-date">27 February &mdash; 30 March, 2017</p>
                 <p class="github-card-description">
                     Course for developing applications on ReactJS
                 </p>
-                <a href="http://learn.javascript.ru/courses/react" target="_blank">learn.javascript.ru</a>
+                <div class="github-card-links">
+                    <a href="http://learn.javascript.ru/courses/react" target="_blank">learn.javascript.ru</a>
+                    <a href="./docs/course-reactjs.jpg" target="_blank">certificate</a>
+                </div>
+
                 <a class="github-card-icon" href="https://github.com/korosteleva/js_ru_27_02_17" target="_blank">
+                    <svg class="icon" width="20" height="20">
+                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-github"></use>
+                    </svg>
+                </a>
+            </div>
+        </li>
+        <li>
+            <div class="github-card">
+                <div class="github-card-title">Advansed Javascript</div>
+                <p class="experience-element-date">23 May &mdash; 5 July, 2017</p>
+                <p class="github-card-description">
+                    Course for advansed frontend developers
+                </p>
+                <div class="github-card-links">
+                    <a href="https://htmlacademy.ru/intensive/ecmascript" target="_blank">htmlacademy.ru</a>
+                    <a href="./docs/course-advansed-js.pdf" target="_blank">certificate</a>
+                </div>
+
+                <a class="github-card-icon" href="https://github.com/korosteleva/105927-pixel-hunter" target="_blank">
                     <svg class="icon" width="20" height="20">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-github"></use>
                     </svg>
