add article pitercss

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
             </svg>
             <a class="link" href="https://medium.com/@tatianakorosteleva/react-amsterdam-2017-60e64e23a50e" target="_blank">React Amsterdam 2017</a>
         </div>
+        <div class="article-element">
+            <svg class="icon" width="20" height="20">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
+            </svg>
+            <a class="link" href="https://medium.com/@tatianakorosteleva/pitercss-conference-e3a69f0a03f7" target="_blank">PiterCSS 2017</a>
+        </div>
     </div>
 </section>
 
