add htmlacademy article

--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
             </svg>
             <a class="link" href="https://medium.com/@tatianakorosteleva/pitercss-conference-e3a69f0a03f7" target="_blank">PiterCSS 2017</a>
         </div>
+        <div class="article-element">
+            <svg class="icon" width="20" height="20">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
+            </svg>
+            <a class="link" href="https://medium.com/@tatianakorosteleva/%D0%BF%D1%80%D0%BE%D0%B4%D0%B2%D0%B8%D0%BD%D1%83%D1%82%D1%8B%D0%B9-javascript-%D0%BE%D1%82-htmlacademy-ru-1769735950a" target="_blank">«Advansed JavaScript» from htmlacademy</a>
+        </div>
     </div>
 </section>
 
