--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <svg class="icon" width="20" height="20">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
             </svg>
-            <a class="link" href="https://medium.com/@tatianakorosteleva/%D0%BF%D1%80%D0%BE%D0%B4%D0%B2%D0%B8%D0%BD%D1%83%D1%82%D1%8B%D0%B9-javascript-%D0%BE%D1%82-htmlacademy-ru-1769735950a" target="_blank">«Advansed JavaScript» from htmlacademy</a>
+            <a class="link" href="https://medium.com/@tatianakorosteleva/%D0%BF%D1%80%D0%BE%D0%B4%D0%B2%D0%B8%D0%BD%D1%83%D1%82%D1%8B%D0%B9-javascript-%D0%BE%D1%82-htmlacademy-ru-1769735950a" target="_blank">«Advanced JavaScript» from htmlacademy</a>
         </div>
     </div>
 </section>
