--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
     <h2>&lt;Work Experience /&gt;</h2>
     <div class="container">
         <div class="experience-element">
+            <p class="experience-element-title">Booking.com</p>
+            <p class="experience-element-date">November, 2017 — present</p>
+            <p>The biggest accommodation platform in the world. Client side developer.</p>
+        </div>
+        <div class="experience-element">
             <p class="experience-element-title">Avito</p>
-            <p class="experience-element-date">October, 2016 — present</p>
+            <p class="experience-element-date">October, 2016 — October, 2017</p>
             <p>The biggest Russian free classifieds site. I work for monetization unit, responsible for advertisement.</p>
         </div>
         <div class="experience-element">
@@ -139,30 +144,6 @@
     </div>
 </section>
 
-<section class="articles">
-    <h2>&lt;Articles /&gt;</h2>
-    <div class="container">
-        <div class="article-element">
-            <svg class="icon" width="20" height="20">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
-            </svg>
-            <a class="link" href="https://medium.com/@tatianakorosteleva/react-amsterdam-2017-60e64e23a50e" target="_blank">React Amsterdam 2017</a>
-        </div>
-        <div class="article-element">
-            <svg class="icon" width="20" height="20">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
-            </svg>
-            <a class="link" href="https://medium.com/@tatianakorosteleva/pitercss-conference-e3a69f0a03f7" target="_blank">PiterCSS 2017</a>
-        </div>
-        <div class="article-element">
-            <svg class="icon" width="20" height="20">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
-            </svg>
-            <a class="link" href="https://medium.com/@tatianakorosteleva/%D0%BF%D1%80%D0%BE%D0%B4%D0%B2%D0%B8%D0%BD%D1%83%D1%82%D1%8B%D0%B9-javascript-%D0%BE%D1%82-htmlacademy-ru-1769735950a" target="_blank">«Advanced JavaScript» from htmlacademy</a>
-        </div>
-    </div>
-</section>
-
 <section class="courses">
     <h2>&lt;Courses /&gt;</h2>
 
@@ -220,12 +201,14 @@
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-github"></use>
         </svg>
         <a href="https://github.com/korosteleva" target="_blank" class="contact-link">GitHub</a>
+
+        <svg class="icon" width="20" height="20">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
+        </svg>
+        <a href="https://medium.com/@tatianakorosteleva" target="_blank" class="contact-link">Medium</a>
     </p>
     <p>
         <a href="mailto:korosteleva.tatiana92@gmail.com">korosteleva.tatiana92@gmail.com</a>
-    </p>
-    <p>
-        <a href="tel:89254860848">+7 (925) 486-08-48</a>
     </p>
 </section>
 <!-- Yandex.Metrika counter -->
