--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-github"></use>
         </svg>
         <a href="https://github.com/korosteleva" target="_blank" class="contact-link">GitHub</a>
-
+        &nbsp;&nbsp;&nbsp;
         <svg class="icon" width="20" height="20">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
         </svg>
