--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <a href="https://github.com/korosteleva" target="_blank" class="contact-link">GitHub</a>
         &nbsp;&nbsp;&nbsp;
         <svg class="icon" width="20" height="20">
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="./symbol-defs.svg#icon-medium"></use>
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="https://korosteleva.github.io/symbol-defs.svg#icon-medium"></use>
         </svg>
         <a href="https://medium.com/@tatianakorosteleva" target="_blank" class="contact-link">Medium</a>
     </p>
